Fix dark mode for some games + remove "BETA" from options

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -454,7 +454,8 @@ a#pageheader_buy {
   background-image: var(--ext-icon-info);
 }
 
-.tundra.game_tutorial_mode .newArchiveCommentDisplay .dijitTooltipContainer {
+.tundra.game_tutorial_mode .newArchiveCommentDisplay .dijitTooltipContainer,
+.dijitTooltipContainer:has(.newArchiveComment) {
   background-color: var(--dark-10) !important;
 }
 
