--- a/src/css/games/cities.less
+++ b/src/css/games/cities.less
@@ -22,4 +22,9 @@ html[data-theme=dark] {
 	#cit-player-aid:not(.cit_player-aid-maximized) {
 		background: var(--dark-20);
 	}
+
+	#cit-last-round-banner {
+		background: var(--orange-30);
+		color: var(--light-80);
+	}
 }
