--- a/src/css/games/fateoffellowship.less
+++ b/src/css/games/fateoffellowship.less
@@ -31,7 +31,8 @@ html[data-theme=dark] {
 		background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #000 25%, #000 50%, #000 75%, hsla(0, 0%, 100%, 0));
 	}
 
-	.fo_popup_content .text1 {
+	.fo_popup_content .text1,
+	.fo_supply p {
 		color: #000;
 	}
 
