--- a/src/css/games/forestshuffledartmoor.less
+++ b/src/css/games/forestshuffledartmoor.less
@@ -1,3 +1,13 @@
+html[data-theme=dark].custom_theme {
+	#overall-content:before {
+		content: "";
+		background: #00000080;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+}
+
 html[data-theme=dark] {
 
 	.player-infos .counter.cards-counter:before,
